# LexFusionNet

./: .dockerignore  .gitignore  Attention.md  Dockerfile  README.md  deletedfiles.txt  docker-compose.yml  empty_statutes_diagnosis.md  git.txt  pyproject.toml  requirements.txt  xecution-focused .md
.agents/rules/: virtualenv.md
artifacts/: README.md  data_audit_report.json
artifacts/analysis/: empty_statutes_by_year.json  empty_statutes_by_year.txt  statutory_analysis_report.json
artifacts/docs/: implementation_plan.md  session_plan.md  task.md
artifacts/phase0/: citation_header_analysis.md
artifacts/phase1/: CitationExtractionAndNormalizationChat.md  citation_extraction_audit.md  citationanalysischat.txt  implementation_plan.md
artifacts/phase2/: 01_neo4j_architecture_and_schema.md  02_execution_roadmap_and_migration.md
configs/: config.yaml
docs/: data_pipeline_plan.md  project_overview.md  research_notes.md
experiments/: __init__.py
experiments/citations/: citation_header_analysis.py  extract_citations.py  find_citations.py  test_flaws.py
experiments/phase2/: __init__.py  ingestion.py  neo4j_client.py  normalizer.py  queries.py  resolvers.py  run_phase2_ingest.py  schema.py  validation.py
experiments/statutory_analysis/: extract_citations.py
guide/: venv.txt
plan/: LexFusionNet_Architecture.md
scripts/: run_phase0.py  run_phase1.py
src/: __init__.py  app.py  config.py
src/PDF2Text/: extract_pdfminer.py  extract_pymupdf.py  hi.py
src/data/: clean_dataset.py  cleaner.py  (+1 more)
tests/: test_parser_headers.py  test_quality_checker.py
(+21 files in other folders)
