[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lexifusionnet"
version = "0.1.0"
description = "Deep legal case similarity system for Indian Supreme Court judgments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
